<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditActivity">

    <TextView
        android:text="@string/max_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="44dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="44dp"/>
    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/maxEdit"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="right"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        android:layout_marginStart="44dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="44dp"/>
    <TextView
        android:text="@string/min_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/maxEdit"
        android:layout_marginStart="44dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="44dp"/>
    <TextView
        android:text="@string/pulse_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginStart="44dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/minEdit"/>
    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/minEdit"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="right"/>
    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/pulseEdit"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="right"/>
    <Button
        android:text="@string/save_text"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:id="@+id/saveBtn"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <Button
        android:text="@string/delete_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteBtn"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saveBtn"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

</androidx.constraintlayout.widget.ConstraintLayout>